// Generated by the protocol buffer compiler.  DO NOT EDIT!
syntax = "proto3";
// @generated
package noah;

// @generated
service NoahService {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc List(ListRequest) returns (ListResponse);
}
// @generated
message SetRequest {
    string key = 1;
    string value = 2;
}
// @generated
message SetResponse {
    bool success = 1;
    string message = 2;
}
// @generated
message GetRequest {
    string key = 1;
}
// @generated
message GetResponse {
    bool found = 1;
    string value = 2;
}
// @generated
message DeleteRequest {
    string key = 1;
}
// @generated
message DeleteResponse {
    bool success = 1;
    string message = 2;
}
// @generated
message ListRequest {
    string prefix = 1;
}
// @generated
message ListResponse {
    repeated string keys = 1;
}